--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dev-portfolio",
-  "homepage": "https://netbek932.github.io/dev-portfolio",
+  "homepage": ".",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,6 +8,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.5.2",
+    "dotenv": "^16.3.1",
     "jquery": "^3.5.1",
     "react": "^16.13.1",
     "react-awesome-slider": "^4.1.0",
